--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ header {
     list-style: none;
     padding-left: 0px;
     float: right;
+    margin: 0;
 }
 
 .navigation {
@@ -22,12 +23,19 @@ header {
 
 .navigation li {
     display: inline-block;
-    padding: 0px 15px;
+    
 }
 
 .navigation a {
+    display: inline-block;
     font-size: 12px;
+    padding: 15px 15px;
 }
+
+.navigation li:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 .navigation a, .call-to-action h1 {
     text-transform: uppercase;
     text-decoration: none;
