--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ header {
 
 .navigation li {
     display: inline-block;
-    
 }
 
 .navigation a {
@@ -32,8 +31,17 @@ header {
     padding: 15px 15px;
 }
 
-.navigation li:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+.navigation li:hover, .navigation li:focus {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.navigation li:active {
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+.logo {
+    line-height: 44px;
+    padding-left: 15px;
 }
 
 .navigation a, .call-to-action h1 {
@@ -61,13 +69,41 @@ header {
     text-transform: uppercase;
     padding: 5px 35px;
     color: #fff;
-}
-
-h2 {
     text-align:center;
     font-weight: normal;
     font-size: 16px;
     padding: 10px;
+}
+
+.services h2 {
+    text-align: center;
+}
+
+.col-4 {
+    width: 33.33%;
+    float: left;
+    padding: 0px 25px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.col-4:hover .icon {
+    background-image: url("img/intro-icons-hover.png");
+}
+
+.icon {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    background-image: url("img/intro-icons.png");
+}
+
+.psd .icon{
+    background-position: -60px 0px;
+}
+
+.programming .icon: {
+    background-image: -120px 0px;
 }
 
 /*Additional*/
